# aurl

./: README.md  pyproject.toml
.github/workflows/: full-package.yml  python-package.yml
aurl/: __init__.py  fetch.py  get.py  get_dir.py  mirror.py  search.py  serve.py  subst.py  taskmgr.py  template.py  urls.py
tests/: template.rc.tpl  test_aurl.py  test_get.py  test_serve.py  test_subst.py
