[tool.poetry]
name = "aurl"
version = "2.2.0"
description = "A package for maintaining a download mirror / cache and splicing URLs into file templates."
authors = ["David M. Rogers <predictivestatmech@gmail.com>"]
license = "BSD3"
readme = "README.md"
repository = "https://github.com/frobnitzem/aurl"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO"
]

[tool.poetry.scripts]
get   = 'aurl.get:app'
subst = 'aurl.subst:app'

[tool.poetry.dependencies]
python = ">=3.9"
aiohttp = "^3.8.5"
aiofiles="^24.1.0"
typer = ">=0.9,<1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
types-aiofiles = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
