[tool.poetry]
name = "aurl"
version = "2.2.0"
description = "A package for maintaining a download mirror / cache and splicing URLs into file templates."
authors = ["David M. Rogers <predictivestatmech@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO"
]
repository = "https://github.com/frobnitzem/aurl"

[project.scripts]
get   = 'aurl.get:app'
subst = 'aurl.subst:app'

[project.dependencies]
python = ">=3.9"
aiohttp = "^3.8.5"
aiofiles="^24.1.0"
typer = ">=0.9,<1.0"

[project.optional-dependencies]
certified = [ "certified>=0.10,<2.0" ]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
types-aiofiles = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
